# ObjectDetectionYOLOv8

./: CMakeLists.txt  README.md  classes.txt  config.yaml  export.py  main.cpp  main.py  predict.py  train_model.py
model_training/: basketaballprediction.py  export.py
